<resources>
    <string name="app_name">PetWell</string>
    <string name="skip">Skip</string>
    <string name="google_btn_text">Sign in with Google</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_title">"Sign in "</string>
    <string name="back_btn">Back button</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_pw">Forgot\npassword?</string>
    <string name="dont_have_account">Don\'t have an account? <font color="#278187">Sign up</font>
</string>
    <string name="username">Username</string>
    <string name="cpassword">Confirm Password</string>
    <string name="register_title">Sign up</string>
    <string name="have_account">Have an account? <font color="#278187">Sign in</font></string>
    <string name="title_ob1">Rapid Diagnosis: Know Pet Issues!</string>
    <string name="subtitle_ob1">Just snap your pet! Get quick, easy, accurate diagnosis with pet disease detection.</string>
    <string name="title_ob2">Easy Consults, Trusted Doctors!</string>
    <string name="subtitle_ob2">Get medical advice from experts without leaving home, ensuring pets receive fast and accurate care.</string>
    <string name="title_ob3">Meet the Doctor? Schedule Now!</string>
    <string name="subtitle_ob3">Find the nearest veterinarian based on your location, facilitating access to the necessary animal healthcare.</string>
    <string name="dummy_title">1 easy step</string>
    <string name="dummy_subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vitae magna enim.</string>
    <string name="field_empty">This field is required.</string>
    <string name="incorrect_email_format">Email format is incorrect.</string>
    <string name="incorrect_pw_format">Password must be at least 8 characters.</string>
    <string name="cpassword_not_match">Please ensure that your confirmation passwords match.</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="promo">Promo</string>
    <string name="profile">Profile</string>
    <string name="active_pet_profile">Active pet profile</string>
    <string name="pet_name">Fiona</string>
    <string name="pet_race">Feline | European</string>
    <string name="change_pet_btn">Change</string>
    <string name="article_section">Article</string>
    <string name="promo_section">Active promo</string>
    <string name="more_btn">More..</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset">Reset</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="token">Token</string>
    <string name="first_feature">Consult a Doctor</string>
    <string name="second_feature">Make an Appointment</string>
    <string name="third_feature">Pet Disease Detection</string>
    <string name="email_verification_sent">Verification link has been sent to %s</string>
    <string name="email_not_found">Error: Email Not Found</string>
    <string name="token_mismatch">Error: Token Mismatch</string>
    <string name="history_type">History Type</string>
    <string name="tab_text_1">Promo</string>
    <string name="tab_text_2">Article</string>
    <string name="article_thumbnail">Thumbnail for article</string>
    <string name="promotion_thumbnail">Thumbnail for promotion</string>
    <string name="top_bar_username">Hello, user</string>
    <string name="top_bar_location">Location</string>
    <string name="pet_sex">Woman</string>
    <string name="edit_btn">Edit</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="pet_list_title">Your Pet</string>
    <string name="setting">Setting</string>
    <string name="help_center">Help Center</string>
    <string name="logout_btn">Logout</string>
    <string name="app_version">Application Version 1.1.0</string>
    <string name="dummy_timestamp">2 May 2024</string>
    <string name="consultation_title">Consultation</string>
    <string name="appointment_title">Appointment</string>
    <string name="scan_title">Scan</string>
    <string name="dummy_blank_title">\t\t\t\t\t\t\t\t</string>
    <string name="dummt_blank_subtitle">\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\n</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_changes" translatable="false">Save Changes</string>
    <string name="active">Active</string>
    <string name="add_new_pet">Add New Pet</string>
    <string name="tvEdtRace">Pet Type</string>
    <string name="delete_pet">Delete Pet</string>
    <string name="add_pet_btn">Add Pet Profile</string>
    <string name="appointment">Appointment</string>
    <string name="price">Rp. 100.000</string>
    <string name="biaya_konsultasi">Consultation Fee</string>
    <string name="answer_questione">Answer Question (1/2)</string>
    <string name="answer_questione_2">Answer Question (2/2)</string>
    <string name="start_scan">Start Scan</string>
    <string name="numberOne">1.</string>
    <string name="decriptionOne">Point your camera to affected area on the animal\'s skin.</string>
    <string name="numbertwo">2.</string>
    <string name="decriptiontwo">Make sure the area is clearly visible on the screen.</string>
    <string name="numberThree">3.</string>
    <string name="descriptionThree">Press the \'Next\' button to continue</string>
    <string name="number4">4.</string>
    <string name="descriptionFour">After that, you\'ll answer some questions</string>
    <string name="numberFive">5.</string>
    <string name="descriptionFive">Answer honestly for an accurate diagnosis.</string>
    <string name="numberSix">6.</string>
    <string name="descriptionSix">Press \'Submit\' when finished.</string>
    <string name="let_s_go">Let\'s Go!!</string>
    <string name="imageUpload">No image yet! Please add one using your gallery or camera.</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="next">Next</string>
    <string name="maintenance">Sorry \n Under maintenance</string>
    <string name="maintenanceDesc">Sorry, the page is currently under maintenance, please go back to home</string>
    <string name="back_to_home">Back to Home</string>
    <string name="animalChoice">Choose your pet that you want to analyze</string>
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="bayar_n_konfirmasi"><![CDATA[Pay & \n Confirm]]></string>
    <string name="time" translatable="false">10:32 AM</string>
    <string-array name="pet_types">
        <item>Dog</item>
        <item>Cat</item>
    </string-array>
    <string name="location_format" translatable="false">%s %s</string>
    <string name="city_not_found">Unknown City</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="maps" translatable="false">AIzaSyBXN3C5I34UTl8P-dA_2jkFZAMlAES6tS8</string>
    <string name="pet_age">Pet Age (years) </string>
    <string name="name">Name</string>
    <string name="example_hour_appointment" translatable="false">09.00 - 12.00</string>
    <string name="dummy_date">Monday, January 16 2023</string>
    <string name="address">address</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="doctor_type">doctor type</string>
    <string name="tabular_option_none">None</string>
    <string name="tabular_option_not_dominant">Not Dominant</string>
    <string name="tabular_option_dominant">Dominant</string>
    <string name="tabular_option_worse">Worse</string>
    <string name="appointment_status_desc">Your appointment was successfully completed, and you can now view the details and confirmation of this appointment in the history section for your reference.</string>
    <string name="succes">Succes</string>
    <string name="result">Result</string>
    <string name="ask_a_doctor">Ask a Doctor</string>
    <string name="service_fee">Service fee</string>
    <string name="payment_method">Payment Method</string>
    <string name="gopay" translatable="false">GoPay</string>
    <string name="dana" translatable="false">DANA</string>
    <string name="link_aja" translatable="false">Link Aja</string>
    <string name="payment_total">Payment Total</string>
    <string name="veterinarian">Veterinarian</string>
    <string name="consultation_for">Consultation for</string>
    <string name="location">Location</string>
    <string name="your_doctor_of_choice">Your Doctor of Choice</string>
    <string name="educational_background">Educational Background</string>
    <string name="doctor_profile">Doctor Profile</string>
    <string name="consultation_fee">Consultation fee: %s</string>
    <string name="title_article">Title article</string>
    <string name="desc_article">desc Article</string>
    <string name="type_a_messege">type a messege</string>
    <string name="chat">Start Chat</string>
    <string name="experience">Experience</string>
    <string name="image_result">image result</string>
    <string name="make_an_appointment_now">Make an Appointment Now</string>
    <string name="your_name">Your Name</string>
    <string name="user_gmail">bangkitIncubation@gmail.com</string>
    <string name="your_email">Your email</string>
    <string name="inform_ordered_data">Information regarding this appointment will be sent to your email below :</string>
    <string name="orderer_data">Orderer Data</string>
    <string name="appointment_time" translatable="false">09:00 - 11:00</string>
    <string name="appointment_date">Wednesday, June 23, 2023</string>
    <string name="schedule">Schedule</string>
    <string name="step2_scan_image">step2 scan image</string>
    <string name="step1_scann_image">step1 scann image</string>
    <string name="dropdown" translatable="false">dropdown</string>
    <string name="navigation">navigation</string>
    <string name="promo_image">promo image</string>
    <string name="current_password">Current Password</string>
    <string name="change_password">Change Password</string>
    <string name="tabular_question1">Crusts (dry crusts on the skin)</string>
    <string name="tabular_question2">Scabby skin</string>
    <string name="tabular_question3">Dandruff</string>
    <string name="tabular_question4">Round rings (ring-shaped rash on the skin)</string>
    <string name="tabular_question5">Scaly skin</string>
    <string name="tabular_question6">Pus</string>
    <string name="tabular_question7">Itching</string>
    <string name="tabular_question8">Fur loss</string>
    <string name="tabular_question9">Red-brown skin discharge</string>
    <string name="tabular_question10">Sores</string>
    <string name="tabular_question_dog1">Weight loss</string>
    <string name="tabular_question_dog2">Limping</string>
    <string name="tabular_question_dog3">Fever</string>
    <string name="tabular_question_dog4">Lethargy</string>
    <string name="tabular_question_dog5">Increased frequency of drinking and urination	</string>
    <string name="tabular_question_dog6">Runny nose	</string>
    <string name="tabular_question_dog7">Difficulty breathing</string>
    <string name="tabular_question_dog8">Vomiting</string>
    <string name="tabular_question_dog9">Loss of appetite</string>
    <string name="tabular_question_dog10">Less food intake than usual</string>
    <string name="tabular_question_cat1">Anorexia (loss of appetite and significant weight loss)	</string>
    <string name="tabular_question_cat2">Lack of response	</string>
    <string name="tabular_question_cat3">Vomiting	</string>
    <string name="tabular_question_cat4">Fever	</string>
    <string name="tabular_question_cat5">Weakness	</string>
    <string name="tabular_question_cat6">Watery eyes	</string>
    <string name="tabular_question_cat7">Runny nose	</string>
</resources>