<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    tools:context=".view.main.featureAppointment.StatusFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/succes"
        android:paddingHorizontal="10dp"
        android:src="@drawable/ic_succes" />

    <TextView
        style="@style/H3Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/succes"
        android:textAlignment="center"
        android:textColor="@color/primary_blue" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="@string/appointment_status_desc"
        android:textAlignment="center"
        android:textSize="14sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_to_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/btn_secondary_states"
            android:fontFamily="@font/semibold"
            android:paddingHorizontal="20dp"
            android:text="@string/history"
            android:textColor="@color/primary_blue" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_to_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/btn_primary_states"
            android:fontFamily="@font/semibold"
            android:paddingHorizontal="20dp"
            android:text="@string/home"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>
