<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginTop="8dp"
    android:background="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:id="@+id/cardDoctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imgDoctor"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/doctor_profile"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDoctorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/imgDoctor"
            android:fontFamily="@font/semibold"
            android:text="@string/doctor_name"

            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/ic_doctor"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_below="@+id/tvDoctorName"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/imgDoctor"
            android:contentDescription="@string/doctor_type"
            android:src="@drawable/ic_doctor" />

        <TextView
            android:id="@+id/doctorType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDoctorName"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/ic_doctor"
            android:ellipsize="end"
            android:fontFamily="@font/regular"
            android:lines="1"
            android:text="@string/pet_race"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/ic_hospital"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_below="@+id/doctorType"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/imgDoctor"
            android:contentDescription="@string/hospital_name"
            android:src="@drawable/ic_hospital" />

        <TextView
            android:id="@+id/tvHospitalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/doctorType"
            android:layout_marginStart="4dp"
            android:paddingEnd="8dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/ic_hospital"
            android:ellipsize="end"
            android:fontFamily="@font/regular"
            android:lines="1"
            android:text="@string/pet_race"
            android:textColor="@color/grey"
            android:textSize="12sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/icLocation"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_below="@+id/tvHospitalName"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/imgDoctor"
            android:contentDescription="@string/experience"
            android:src="@drawable/ic_clock" />

        <TextView
            android:id="@+id/tvExperience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvHospitalName"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/ic_doctor"
            android:ellipsize="end"
            android:fontFamily="@font/regular"
            android:text="@string/experience"
            android:textColor="@color/grey"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icLocation"
            android:layout_alignBottom="@+id/btnChat"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="29dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/bold"
            android:text="@string/price"
            android:textColor="@color/yellow"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icLocation"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/bold"
            android:text="@string/chat"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>
