<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:orientation="vertical"
    tools:context=".view.main.MaintenanceFragment">

    <ImageView
        android:contentDescription="@string/maintenance"
        android:paddingHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/img_detail_appointment"
        android:layout_marginTop="64dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maintenance"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        style="@style/H3Bold"/>
    <TextView
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/maintenanceDesc"
        android:textAlignment="center"
        android:fontFamily="@font/regular"
        android:textSize="14sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reset_btn"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_primary_states"
        android:fontFamily="@font/regular"
        android:text="@string/back_to_home"
        android:textColor="@color/white"
        />
</LinearLayout>