<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.auth.LoginFragment"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/back_btn"
        android:layout_margin="20dp"
        android:backgroundTint="@color/white"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/login_title"
        android:fontFamily="@font/bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_btn"
        app:layout_constraintBottom_toBottomOf="@id/back_btn"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:text="@string/email"
        android:fontFamily="@font/semibold"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_btn"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:id="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"
        android:background="@drawable/rounded_et"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:text="@string/password"
        android:fontFamily="@font/semibold"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"/>

    <com.ents_h108.petwell.view.auth.PasswordEditText
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:id="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:drawableEnd="@drawable/visibility_off"
        android:drawableTint="@color/primary_blue"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:background="@drawable/rounded_et"/>


    <LinearLayout
        android:id="@+id/util"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/remember_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/remember_me"
            android:fontFamily="@font/semibold"
            android:textSize="14sp"/>

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/forgot_pw"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/forgot_pw"
            android:textColor="@color/black"
            android:textAlignment="textEnd"
            android:fontFamily="@font/semibold"
            android:textSize="14sp"
            android:backgroundTint="@color/white"
            android:elevation="0dp"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/log_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:fontFamily="@font/semibold"
        app:layout_constraintTop_toBottomOf="@id/util"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/btn_primary_states"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reg_btn"
        android:text="@string/dont_have_account"
        android:fontFamily="@font/semibold"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/log_btn"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleLarge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminate="true"
        android:indeterminateTint="@color/secondary_blue"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>