<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".view.main.featureScan.ImageScanFragment">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:indeterminate="true"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressIndicator"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/upload_image"
        app:layout_constraintDimensionRatio="1:1" />

    <TextView
        style="@style/H3Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imagePreview"
        android:text="@string/imageUpload"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_Next"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/galleryButton"
            style="@style/H4Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_primary_states"
            android:elevation="2dp"
            android:text="@string/gallery"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/cameraButton"
            style="@style/H4Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_primary_states"
            android:text="@string/camera"
            android:textColor="@color/white" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Next"
        style="@style/H4Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_yellow_states"
        android:text="@string/next"
        android:textColor="@android:color/white" />

</RelativeLayout>
