<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="235dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardBackgroundColor="@color/grey"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="2dp">

        <RelativeLayout
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:id="@+id/item_thumbnail"
                android:contentDescription="@string/article_thumbnail"
                android:scaleType="centerCrop"
                android:background="@color/light_grey"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/article_title"
                android:text="@string/dummy_blank_title"
                android:layout_below="@id/item_thumbnail"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp"
                android:background="@color/light_grey"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/article_desc"
                android:text="@string/dummt_blank_subtitle"
                android:layout_below="@id/article_title"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp"
                android:background="@color/light_grey"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
